--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -8,6 +8,10 @@ on:
   pull_request:
     branches: [ main ]
 
+permissions:
+  contents: write
+  packages: write
+
 env:
   DOTNET_VERSION: '10.0.x'
   PROJECT_PATH: 'src/EntraTokenCli/EntraTokenCli.csproj'
