--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -33,11 +33,23 @@ jobs:
       with:
         dotnet-version: ${{ env.DOTNET_VERSION }}
 
+    - name: Get version from tag
+      id: get_version
+      if: startsWith(github.ref, 'refs/tags/v')
+      shell: bash
+      run: echo "VERSION=${GITHUB_REF#refs/tags/v}" >> $GITHUB_OUTPUT
+
     - name: Restore dependencies
       run: dotnet restore
 
     - name: Build
-      run: dotnet build --configuration Release --no-restore
+      run: |
+        if [ "${{ steps.get_version.outputs.VERSION }}" != "" ]; then
+          dotnet build --configuration Release --no-restore /p:Version=${{ steps.get_version.outputs.VERSION }}
+        else
+          dotnet build --configuration Release --no-restore
+        fi
+      shell: bash
 
     - name: Test
       run: dotnet test --configuration Release --no-build --verbosity normal
