chore: Allow documentation deployment on feature branches

--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -4,6 +4,7 @@ on:
   push:
     branches:
       - main
+      - feat/**
     paths:
       - 'docs/learn/**'
       - '.github/workflows/deploy-docs.yml'
