fix: code block rendering gap between start of 1st char

--- a/docs/learn/hugo.yaml
+++ b/docs/learn/hugo.yaml
@@ -29,6 +29,8 @@ params:
     title: "Documentation"
     pathName: "docs"
     themeColor: "blue"
+    prism: true
+    prismTheme: "lotusdocs"
   
   # Table of Contents
   toc:
@@ -85,6 +87,3 @@ markup:
   goldmark:
     renderer:
       unsafe: true
-  highlight:
-    style: monokai
-    lineNos: true
