--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -138,7 +138,7 @@ jobs:
       shell: bash
       run: |
         cd ./publish/${{ matrix.rid }}
-        mv EntraTokenCli ${{ matrix.artifact-name }}
+        mv EntraAuthCli ${{ matrix.artifact-name }}
         chmod +x ${{ matrix.artifact-name }}
 
     - name: Rename executable (Windows)
@@ -146,7 +146,7 @@ jobs:
       shell: pwsh
       run: |
         cd ./publish/${{ matrix.rid }}
-        Rename-Item -Path "EntraTokenCli.exe" -NewName "${{ matrix.artifact-name }}"
+        Rename-Item -Path "EntraAuthCli.exe" -NewName "${{ matrix.artifact-name }}"
 
     - name: Upload executable artifact
       uses: actions/upload-artifact@v4
@@ -183,7 +183,7 @@ jobs:
 
         **Option 1: .NET Global Tool**
         ```bash
-        dotnet tool install -g EntraTokenCli --version ${{ steps.get_version.outputs.VERSION }}
+        dotnet tool install -g EntraAuthCli --version ${{ steps.get_version.outputs.VERSION }}
         ```
 
         **Option 2: Self-Contained Executables**
